# [package]
# name = "solana-greet"
# description = "Types and utilities for the Solana Greet sysvar."
# # documentation = "https://docs.rs/solana-last-restart-slot"
# version = "0.1.0"
# authors = { workspace = true }
# repository = { workspace = true }
# homepage = { workspace = true }
# license = { workspace = true }
# edition = { workspace = true }

# [dependencies]
# serde = { workspace = true, optional = true }
# serde_derive = { workspace = true, optional = true }
# solana-sdk-ids = { workspace = true, optional = true }
# solana-sdk-macro = { workspace = true }
# solana-sysvar-id = { workspace = true, optional = true }

# [features]
# serde = ["dep:serde", "dep:serde_derive"]
# sysvar = ["dep:solana-sdk-ids", "dep:solana-sysvar-id"]

# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]
# all-features = true
# rustdoc-args = ["--cfg=docsrs"]


[package]
name = "solana-greet"
description = "Types and utilities for the Solana Greet sysvar."
# documentation = "https://docs.rs/solana-last-restart-slot"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-sdk-ids = { workspace = true, optional = true }
solana-sdk-macro = { workspace = true }
solana-sysvar-id = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "dep:serde_derive"]
sysvar = ["dep:solana-sdk-ids", "dep:solana-sysvar-id"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
